--- a/index.html
+++ b/index.html
@@ -5,80 +5,8 @@
   </head>
 
   <body>
-    <div id="todo-list1"></div>
-    <div id="todo-list2"></div>
-    <div id="todo-list3"></div>
-    <script>
-      const data1 = [
-        {
-          text: 'JS 공부하기',
-          isCompleted: true,
-        },
-        {
-          text: 'JS 복습하기',
-          isCompleted: false,
-        },
-      ];
-      const data2 = [
-        {
-          text: 'TS 공부하기',
-          isCompleted: true,
-        },
-        {
-          text: 'TS 복습하기',
-          isCompleted: false,
-        },
-      ];
-      const data3 = [
-        {
-          text: 'React 공부하기',
-          isCompleted: false,
-        },
-        {
-          text: 'React 복습하기',
-          isCompleted: false,
-        },
-      ];
-
-      function TodoList(data, target) {
-        if (data === null || data === undefined)
-          throw new Error('data가 null 또는 undefined 입니다.');
-        if (!Array.isArray(data)) throw new Error('data가 배열이 아닙니다.');
-        if (new.target === undefined)
-          throw new Error('new 키워드가 사용되지 않았습니다.');
-
-        this.data = data;
-        this.$target = document.getElementById(target);
-
-        this.setState = (newData) => {
-          this.data = newData;
-          this.render();
-        };
-
-        this.render = () => {
-          this.data.map((item) => {
-            const listItem = document.createElement('li');
-            listItem.innerHTML = item.isCompleted
-              ? `<s>${item.text}</s>`
-              : `<span>${item.text}</span>`;
-            this.$target.appendChild(listItem);
-          });
-        };
-
-        this.render();
-      }
-
-      try {
-        const todoList = new TodoList(data1, 'todo-list1');
-        const todoList2 = new TodoList(data2, 'todo-list2');
-        const todoList3 = new TodoList(data3, 'todo-list3');
-        todoList.setState([
-          { text: '네트워크 공부하기', isCompleted: true },
-          { text: '운영체제 공부하기', isCompleted: false },
-        ]);
-      } catch (err) {
-        alert(err);
-      }
-    </script>
+    <div id="todo-list"></div>
+    <script src="./TodoList.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
